--- a/package.json
+++ b/package.json
@@ -5,17 +5,44 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-helmet": "^6.1.8",
     "gatsby": "^5.12.4",
-    "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-canonical-urls": "^5.12.0",
+    "gatsby-plugin-emotion": "^8.12.0",
+    "gatsby-plugin-image": "^3.12.1",
     "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.12.1",
+    "gatsby-plugin-sitemap": "^6.12.3",
+    "gatsby-plugin-typescript": "^5.12.0",
+    "gatsby-remark-copy-linked-files": "^6.12.0",
+    "gatsby-remark-external-links": "^0.0.4",
+    "gatsby-remark-images": "^7.12.1",
+    "gatsby-remark-prismjs": "^7.12.0",
+    "gatsby-remark-smartypants": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
-    "gatsby-transformer-sharp": "^5.12.0",
+    "gatsby-transformer-remark": "^6.12.1",
+    "gatsby-transformer-sharp": "^5.12.1",
+    "prismjs": "^1.29.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.8"
+    "@typescript-eslint/eslint-plugin": "^6.7.5",
+    "@typescript-eslint/parser": "^6.7.5",
+    "eslint": "^8.51.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   },
   "keywords": [
     "gatsby"
